--- a/src/components/MailboxList.css
+++ b/src/components/MailboxList.css
@@ -5,7 +5,7 @@
 }
   
 .mailbox-list h2 {
-    font-size: 2.5rem; 
+    font-size: 40px; 
     margin-bottom: 20px; 
 }
   
@@ -18,7 +18,7 @@
 }
   
 .mailbox-list li {
-    font-size: 1.2rem; 
+    font-size: 20px; 
     padding: 10px 20px; 
     background-color: #333; 
     border-radius: 5px; 
